internal/services/testdata/golden/httproute-deploy/external-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/managed-by: fastgateway
    fastgateway.dev/gateway-id: 22222222-2222-2222-2222-222222222222
    fastgateway.dev/route-id: 11111111-1111-1111-1111-111111111111
  name: external-11111111
  namespace: gateway-ns
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: eg
    namespace: gateway-ns
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: external-11111111-backend-0
      namespace: gateway-ns
      port: 443
    matches:
    - path:
        type: PathPrefix
        value: /api
status:
  parents: null
