internal/services/testdata/golden/httproute-deploy/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/managed-by: fastgateway
    fastgateway.dev/gateway-id: 22222222-2222-2222-2222-222222222222
    fastgateway.dev/route-id: 11111111-1111-1111-1111-111111111111
  name: redirect-11111111
  namespace: gateway-ns
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: eg
    namespace: gateway-ns
  rules:
  - filters:
    - requestRedirect:
        scheme: https
        statusCode: 301
      type: RequestRedirect
    matches:
    - path:
        type: PathPrefix
        value: /api
status:
  parents: null
